2009-10-13 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.31.4
	* info/patches/maintenance_patches/patch-2.6.31.4: added
	* info/patches/maintenance_patches/patch-2.6.27.37: added

2009-10-08 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.31.3
	* info/patches/maintenance_patches/patch-2.6.31.3: added

2009-10-05 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.31.2
	* info/patches/maintenance_patches/patch-2.6.31.2: added
	* info/patches/maintenance_patches/patch-2.6.27.36: added
	* info/patches/maintenance_patches/patch-2.6.30.9: added

2009-09-25 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.35: added

2009-09-24 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.31.1
	* info/patches/maintenance_patches/patch-2.6.31.1: added

2009-09-16 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.34: added

2009-09-11 Arjan Bouter <abouter@sourcemage.org>
	* info/patches/zen_patches/2.6.30-zen4.patch: latest zen

2009-09-11 Ladislav Hagara <hgr@vabo.cz>
	* info/patches/ck_bfs/2.6.31-sched-bfs-211.patch: added

2009-09-10 Eric Sandall <sandalle@sourcemage.org>
	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.22.patch: Support 2.6.30
	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.31.patch: SMGL Logo 0.2
	  patch for 2.6.31+ (Bug #15403)

2009-09-10 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: 2.6.31
	* info/kernels/2.6.31: added
	* info/patches/PRE_2_6/patch-2.6.31: added
	* info/patches/maintenance_patches/patch-2.6.31: added

2009-09-10 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.33: added

2009-09-09 Vlad Glagolev <stealth@sourcemage.org>
	* info/patches/maintenance_patches/patch-2.6.27.32: added

2009-09-09 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.30.6