@@ -1,0 +1,6 @@
+appliedkernels="2.6.31"
+depends=""
+patchversion="${appliedkernels}-zen3"
+source="${patchversion}.patch.lzma"
+source_url="http://zen-sources.org/files/${source}"
+md5="3640e5d35d9adc5984f6a17df2071d5a"
