@@ -17,4 +17,4 @@ LATEST_cko_patches=patch-2.6.12-cko3
 LATEST_as_patches=patch-2.6.10-as7
 LATEST_love_patches=2.6.12-love1
 LATEST_realtime_patches=patch-2.6.25.4-rt5
-LATEST_zen_patches=2.6.30-zen4.patch
+LATEST_zen_patches=2.6.31-zen3.patch
