@@ -1,3 +1,6 @@
+2009-10-13 Arjan Bouter <abouter@sourcemage.org>
+	* info/patches/zen_patches/2.6.31-zen3.patch: latest zen
+
 2009-10-13 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: updated latest to patch-2.6.31.4
 	* info/patches/maintenance_patches/patch-2.6.31.4: added
